# testr

./: LICENSE  README.md  pyproject.toml  testr.py
testr/: cli.py  file_data.py  runner.py
