[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gusty-testr"
version = "0.0.2"
authors = [
	{ name="dogeystamp", email="dogeystamp@disroot.org" }
]
description = "A test runner for competitive programming."
readme = "README.md"
requires-python = ">=3.7"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
	"colorama > 0.4.0"
]

[project.scripts]
testr = "testr.cli:main"
